# sCCraper-IT

./: README.md  pyproject.toml  requirements.txt
src/: config.py  main.py
src/cli/: handlers.py  parser.py
src/core/: scraper.py  session.py  utils.py
